--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,40 @@
 .app {
- margin-left: 10% ;
+  background-size: 300px 100px,cover;
+  padding: 5% 0% 5% 10%;
+  background: #DCDCDC ; 
+  font-family:Courier, Monaco, monospace;  
+  margin-top: 0px;
+  font-size: 21px;
+  text-align: center;
+  animation: fadein 7s;
+  -moz-animation: fadein 7s; 
+  -webkit-animation: fadein 7s; 
+  -o-animation: fadein 7s; 
+  
 }
 
 .title {
-
+  padding-bottom: 2%;
+  padding-right: 50%;
 }
 
 .content {
-  
+  padding-bottom: 8%;
+  padding-right: 50%;
+}
+
+.buttonAddNote {
+  background-color: grey;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  display: inline-block;
+  font-size: 16px;
+}
+input,
+input::-webkit-input-placeholder {
+    font-size: 18px;
+    line-height: 3;
 }
 
 .notesNavbar {
@@ -31,9 +58,9 @@
   font-size: 21px;
   text-align: center;
   animation: fadein 5s;
-  -moz-animation: fadein 5s; /* Firefox */
-  -webkit-animation: fadein 5s; /* Safari and Chrome */
-  -o-animation: fadein 5s; /* Opera */
+  -moz-animation: fadein 5s; 
+  -webkit-animation: fadein 5s; 
+  -o-animation: fadein 5s; 
 }
 
 .link {
@@ -54,6 +81,8 @@
   min-width: 20%;
   min-height: 100%;
 }
+
+
 @keyframes slideInFromLeft {
   0% {
     transform: translateX(-100%);
@@ -64,9 +93,7 @@
 }
 
 .navbar {  
-  /* This section calls the slideInFromLeft animation we defined above */
   animation: 1s ease-out 0s 1 slideInFromLeft;
-  
   background: red;
   padding: 30px;
 }
@@ -79,7 +106,7 @@
       opacity:1;
   }
 }
-@-moz-keyframes fadein { /* Firefox */
+@-moz-keyframes fadein { 
   from {
       opacity:0;
   }
@@ -87,7 +114,7 @@
       opacity:1;
   }
 }
-@-webkit-keyframes fadein { /* Safari and Chrome */
+@-webkit-keyframes fadein { 
   from {
       opacity:0;
   }
@@ -95,7 +122,7 @@
       opacity:1;
   }
 }
-@-o-keyframes fadein { /* Opera */
+@-o-keyframes fadein { 
   from {
       opacity:0;
   }
@@ -113,9 +140,9 @@
   font-size: 21px;
   text-align: center;
   animation: fadein 2s;
-  -moz-animation: fadein 2s; /* Firefox */
-  -webkit-animation: fadein 2s; /* Safari and Chrome */
-  -o-animation: fadein 2s; /* Opera */
+  -moz-animation: fadein 2s; 
+  -webkit-animation: fadein 2s; 
+  -o-animation: fadein 2s; 
 }
 @keyframes fadein {
   from {
@@ -125,7 +152,7 @@
       opacity:1;
   }
 }
-@-moz-keyframes fadein { /* Firefox */
+@-moz-keyframes fadein { 
   from {
       opacity:0;
   }
@@ -133,7 +160,7 @@
       opacity:1;
   }
 }
-@-webkit-keyframes fadein { /* Safari and Chrome */
+@-webkit-keyframes fadein { 
   from {
       opacity:0;
   }
@@ -141,7 +168,7 @@
       opacity:1;
   }
 }
-@-o-keyframes fadein { /* Opera */
+@-o-keyframes fadein { 
   from {
       opacity:0;
   }
