--- a/src/App.css
+++ b/src/App.css
@@ -42,10 +42,10 @@ ul {
 .wrapper {
   padding: 3% 0% 0% 2%;
   font-family:Courier, Monaco, monospace; 
-  animation: fadein 9s;
-  -moz-animation: fadein 9s; 
-  -webkit-animation: fadein 9s; 
-  -o-animation: fadein 9s; 
+  animation: fadein 3s;
+  -moz-animation: fadein 3s; 
+  -webkit-animation: fadein 3s; 
+  -o-animation: fadein 3s; 
 }
 .removeButton {
   background-color: grey;
@@ -111,7 +111,7 @@ input::-webkit-input-placeholder {
   position: fixed; 
   min-width: 100%;
   min-height: 100%;
-  background: red;
+  background: #DCDCDC;
   font-family:Courier, Monaco, monospace;  
   margin-top: 0px;
   font-size: 21px;
